# oshx

./: .gitignore  .mcp.json  LICENSE  cli-v2.tsx  cli.ts  index.ts  opencode.json  package.json  runtime-config.json  tsconfig.json
docs/instrucoes/: CLAUDE.md
docs/superpowers/plans/: 2026-04-15-remotion-video.md  2026-04-19-mcp-v2-closed-loop.md  2026-04-19-oshx-ide.md
ide/: .env.example  package.json  tsconfig.json  vite.config.ts
ide/electron/: ipc-handlers.ts  keychain.ts  main.ts  oauth.ts  preload.ts  sidecar.ts  terminal.ts
ide/renderer/: index.html
ide/rust-sidecar/: Cargo.toml
ide/rust-sidecar/src/: fs_ops.rs  git_ops.rs  main.rs  rpc.rs
ide/shared/: types.ts
oshx-video/: package.json
oshx-video/src/: Root.tsx  Video.tsx  data.ts  theme.ts
src/core/: boot.ts  browser-session.ts  consciousness.ts  constants.ts  events.ts  logger.ts  memory.ts  registry.ts  runtime-setup.ts  server.ts  state.ts
src/modules/: channels.ts  moderation.ts  profiles.ts  voting.ts
src/services/: autonomy.ts  browser.ts  git.ts  terminal.ts
src/tools/: agent-tools.ts  browser-session-tools.ts  browser-tools.ts  cache-tools.ts  channel-tools.ts  consensus-tools.ts  emergency-tools.ts  fs-tools.ts  git-tools.ts  identity.ts  memory-tools.ts  orchestrator-tools.ts  shell-tools.ts  swarm-tools.ts  system-tools.ts  task-tools.ts  terminal-tools.ts  vault-tools.ts  workspace-tools.ts  xp-tools.ts
src/web/: server.ts
tests/: fs-tools.test.ts  helpers.ts  memory-tools.test.ts  orchestrator.test.ts  registry.test.ts  shell-tools.test.ts  state.test.ts
(+31 files in other folders)
