[package]
name = "oshx-sidecar"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oshx-sidecar"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "6"
git2 = "0.19"

[profile.release]
opt-level = 3
strip = true
